Script/Framework/ExpressionGrammarParser.java
// $ANTLR 3.5.2 Script\\Framework\\ExpressionGrammar.g 2016-11-27 08:53:01

package ATSSG.Script.Framework;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class ExpressionGrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "AND", "DIV", "EQ", "GT", 
		"GTE", "LPAREN", "LT", "LTE", "MULT", "NAME", "NE", "NOT", "NUMBER", "OR", 
		"RPAREN", "SUBT", "WS"
	};
	public static final int EOF=-1;
	public static final int ADD=4;
	public static final int AND=5;
	public static final int DIV=6;
	public static final int EQ=7;
	public static final int GT=8;
	public static final int GTE=9;
	public static final int LPAREN=10;
	public static final int LT=11;
	public static final int LTE=12;
	public static final int MULT=13;
	public static final int NAME=14;
	public static final int NE=15;
	public static final int NOT=16;
	public static final int NUMBER=17;
	public static final int OR=18;
	public static final int RPAREN=19;
	public static final int SUBT=20;
	public static final int WS=21;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ExpressionGrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ExpressionGrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ExpressionGrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Script\\Framework\\ExpressionGrammar.g"; }


	public static class booleanexpression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "booleanexpression"
	// Script\\Framework\\ExpressionGrammar.g:46:1: booleanexpression : andexpression ;
	public final ExpressionGrammarParser.booleanexpression_return booleanexpression() throws RecognitionException {
		ExpressionGrammarParser.booleanexpression_return retval = new ExpressionGrammarParser.booleanexpression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope andexpression1 =null;


		try {
			// Script\\Framework\\ExpressionGrammar.g:46:19: ( andexpression )
			// Script\\Framework\\ExpressionGrammar.g:46:21: andexpression
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_andexpression_in_booleanexpression276);
			andexpression1=andexpression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, andexpression1.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "booleanexpression"


	public static class numberexpression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "numberexpression"
	// Script\\Framework\\ExpressionGrammar.g:47:1: numberexpression : pmexpression ;
	public final ExpressionGrammarParser.numberexpression_return numberexpression() throws RecognitionException {
		ExpressionGrammarParser.numberexpression_return retval = new ExpressionGrammarParser.numberexpression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope pmexpression2 =null;


		try {
			// Script\\Framework\\ExpressionGrammar.g:47:18: ( pmexpression )
			// Script\\Framework\\ExpressionGrammar.g:47:20: pmexpression
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_pmexpression_in_numberexpression283);
			pmexpression2=pmexpression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression2.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "numberexpression"


	public static class andexpression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "andexpression"
	// Script\\Framework\\ExpressionGrammar.g:48:1: andexpression : ( orexpression AND ^ andexpression | orexpression );
	public final ExpressionGrammarParser.andexpression_return andexpression() throws RecognitionException {
		ExpressionGrammarParser.andexpression_return retval = new ExpressionGrammarParser.andexpression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token AND4=null;
		ParserRuleReturnScope orexpression3 =null;
		ParserRuleReturnScope andexpression5 =null;
		ParserRuleReturnScope orexpression6 =null;

		Object AND4_tree=null;

		try {
			// Script\\Framework\\ExpressionGrammar.g:48:15: ( orexpression AND ^ andexpression | orexpression )
			int alt1=2;
			switch ( input.LA(1) ) {
			case SUBT:
				{
				int LA1_1 = input.LA(2);
				if ( (synpred1_ExpressionGrammar()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case NAME:
				{
				int LA1_2 = input.LA(2);
				if ( (synpred1_ExpressionGrammar()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case NUMBER:
				{
				int LA1_3 = input.LA(2);
				if ( (synpred1_ExpressionGrammar()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case LPAREN:
				{
				int LA1_4 = input.LA(2);
				if ( (synpred1_ExpressionGrammar()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case NOT:
				{
				int LA1_5 = input.LA(2);
				if ( (synpred1_ExpressionGrammar()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// Script\\Framework\\ExpressionGrammar.g:48:17: orexpression AND ^ andexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_orexpression_in_andexpression290);
					orexpression3=orexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, orexpression3.getTree());

					AND4=(Token)match(input,AND,FOLLOW_AND_in_andexpression292); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					AND4_tree = (Object)adaptor.create(AND4);
					root_0 = (Object)adaptor.becomeRoot(AND4_tree, root_0);
					}

					pushFollow(FOLLOW_andexpression_in_andexpression295);
					andexpression5=andexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, andexpression5.getTree());

					}
					break;
				case 2 :
					// Script\\Framework\\ExpressionGrammar.g:48:51: orexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_orexpression_in_andexpression299);
					orexpression6=orexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, orexpression6.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "andexpression"


	public static class orexpression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "orexpression"
	// Script\\Framework\\ExpressionGrammar.g:49:1: orexpression : ( ineqexpression OR ^ ineqexpression | ineqexpression );
	public final ExpressionGrammarParser.orexpression_return orexpression() throws RecognitionException {
		ExpressionGrammarParser.orexpression_return retval = new ExpressionGrammarParser.orexpression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token OR8=null;
		ParserRuleReturnScope ineqexpression7 =null;
		ParserRuleReturnScope ineqexpression9 =null;
		ParserRuleReturnScope ineqexpression10 =null;

		Object OR8_tree=null;

		try {
			// Script\\Framework\\ExpressionGrammar.g:49:14: ( ineqexpression OR ^ ineqexpression | ineqexpression )
			int alt2=2;
			switch ( input.LA(1) ) {
			case SUBT:
				{
				int LA2_1 = input.LA(2);
				if ( (synpred2_ExpressionGrammar()) ) {
					alt2=1;
				}
				else if ( (true) ) {
					alt2=2;
				}

				}
				break;
			case NAME:
				{
				int LA2_2 = input.LA(2);
				if ( (synpred2_ExpressionGrammar()) ) {
					alt2=1;
				}
				else if ( (true) ) {
					alt2=2;
				}

				}
				break;
			case NUMBER:
				{
				int LA2_3 = input.LA(2);
				if ( (synpred2_ExpressionGrammar()) ) {
					alt2=1;
				}
				else if ( (true) ) {
					alt2=2;
				}

				}
				break;
			case LPAREN:
				{
				int LA2_4 = input.LA(2);
				if ( (synpred2_ExpressionGrammar()) ) {
					alt2=1;
				}
				else if ( (true) ) {
					alt2=2;
				}

				}
				break;
			case NOT:
				{
				int LA2_5 = input.LA(2);
				if ( (synpred2_ExpressionGrammar()) ) {
					alt2=1;
				}
				else if ( (true) ) {
					alt2=2;
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// Script\\Framework\\ExpressionGrammar.g:49:16: ineqexpression OR ^ ineqexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_ineqexpression_in_orexpression306);
					ineqexpression7=ineqexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, ineqexpression7.getTree());

					OR8=(Token)match(input,OR,FOLLOW_OR_in_orexpression308); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					OR8_tree = (Object)adaptor.create(OR8);
					root_0 = (Object)adaptor.becomeRoot(OR8_tree, root_0);
					}

					pushFollow(FOLLOW_ineqexpression_in_orexpression311);
					ineqexpression9=ineqexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, ineqexpression9.getTree());

					}
					break;
				case 2 :
					// Script\\Framework\\ExpressionGrammar.g:49:52: ineqexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_ineqexpression_in_orexpression315);
					ineqexpression10=ineqexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, ineqexpression10.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "orexpression"


	public static class ineqexpression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ineqexpression"
	// Script\\Framework\\ExpressionGrammar.g:50:1: ineqexpression : ( pmexpression EQ ^ pmexpression | pmexpression LT ^ pmexpression | pmexpression LTE ^ pmexpression | pmexpression GT ^ pmexpression | pmexpression GTE ^ pmexpression | pmexpression NE ^ pmexpression | notexpression );
	public final ExpressionGrammarParser.ineqexpression_return ineqexpression() throws RecognitionException {
		ExpressionGrammarParser.ineqexpression_return retval = new ExpressionGrammarParser.ineqexpression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EQ12=null;
		Token LT15=null;
		Token LTE18=null;
		Token GT21=null;
		Token GTE24=null;
		Token NE27=null;
		ParserRuleReturnScope pmexpression11 =null;
		ParserRuleReturnScope pmexpression13 =null;
		ParserRuleReturnScope pmexpression14 =null;
		ParserRuleReturnScope pmexpression16 =null;
		ParserRuleReturnScope pmexpression17 =null;
		ParserRuleReturnScope pmexpression19 =null;
		ParserRuleReturnScope pmexpression20 =null;
		ParserRuleReturnScope pmexpression22 =null;
		ParserRuleReturnScope pmexpression23 =null;
		ParserRuleReturnScope pmexpression25 =null;
		ParserRuleReturnScope pmexpression26 =null;
		ParserRuleReturnScope pmexpression28 =null;
		ParserRuleReturnScope notexpression29 =null;

		Object EQ12_tree=null;
		Object LT15_tree=null;
		Object LTE18_tree=null;
		Object GT21_tree=null;
		Object GTE24_tree=null;
		Object NE27_tree=null;

		try {
			// Script\\Framework\\ExpressionGrammar.g:50:15: ( pmexpression EQ ^ pmexpression | pmexpression LT ^ pmexpression | pmexpression LTE ^ pmexpression | pmexpression GT ^ pmexpression | pmexpression GTE ^ pmexpression | pmexpression NE ^ pmexpression | notexpression )
			int alt3=7;
			switch ( input.LA(1) ) {
			case SUBT:
				{
				int LA3_1 = input.LA(2);
				if ( (synpred3_ExpressionGrammar()) ) {
					alt3=1;
				}
				else if ( (synpred4_ExpressionGrammar()) ) {
					alt3=2;
				}
				else if ( (synpred5_ExpressionGrammar()) ) {
					alt3=3;
				}
				else if ( (synpred6_ExpressionGrammar()) ) {
					alt3=4;
				}
				else if ( (synpred7_ExpressionGrammar()) ) {
					alt3=5;
				}
				else if ( (synpred8_ExpressionGrammar()) ) {
					alt3=6;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case NAME:
				{
				int LA3_2 = input.LA(2);
				if ( (synpred3_ExpressionGrammar()) ) {
					alt3=1;
				}
				else if ( (synpred4_ExpressionGrammar()) ) {
					alt3=2;
				}
				else if ( (synpred5_ExpressionGrammar()) ) {
					alt3=3;
				}
				else if ( (synpred6_ExpressionGrammar()) ) {
					alt3=4;
				}
				else if ( (synpred7_ExpressionGrammar()) ) {
					alt3=5;
				}
				else if ( (synpred8_ExpressionGrammar()) ) {
					alt3=6;
				}
				else if ( (true) ) {
					alt3=7;
				}

				}
				break;
			case NUMBER:
				{
				int LA3_3 = input.LA(2);
				if ( (synpred3_ExpressionGrammar()) ) {
					alt3=1;
				}
				else if ( (synpred4_ExpressionGrammar()) ) {
					alt3=2;
				}
				else if ( (synpred5_ExpressionGrammar()) ) {
					alt3=3;
				}
				else if ( (synpred6_ExpressionGrammar()) ) {
					alt3=4;
				}
				else if ( (synpred7_ExpressionGrammar()) ) {
					alt3=5;
				}
				else if ( (synpred8_ExpressionGrammar()) ) {
					alt3=6;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case LPAREN:
				{
				int LA3_4 = input.LA(2);
				if ( (synpred3_ExpressionGrammar()) ) {
					alt3=1;
				}
				else if ( (synpred4_ExpressionGrammar()) ) {
					alt3=2;
				}
				else if ( (synpred5_ExpressionGrammar()) ) {
					alt3=3;
				}
				else if ( (synpred6_ExpressionGrammar()) ) {
					alt3=4;
				}
				else if ( (synpred7_ExpressionGrammar()) ) {
					alt3=5;
				}
				else if ( (synpred8_ExpressionGrammar()) ) {
					alt3=6;
				}
				else if ( (true) ) {
					alt3=7;
				}

				}
				break;
			case NOT:
				{
				alt3=7;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// Script\\Framework\\ExpressionGrammar.g:50:17: pmexpression EQ ^ pmexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_pmexpression_in_ineqexpression321);
					pmexpression11=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression11.getTree());

					EQ12=(Token)match(input,EQ,FOLLOW_EQ_in_ineqexpression323); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					EQ12_tree = (Object)adaptor.create(EQ12);
					root_0 = (Object)adaptor.becomeRoot(EQ12_tree, root_0);
					}

					pushFollow(FOLLOW_pmexpression_in_ineqexpression326);
					pmexpression13=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression13.getTree());

					}
					break;
				case 2 :
					// Script\\Framework\\ExpressionGrammar.g:50:49: pmexpression LT ^ pmexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_pmexpression_in_ineqexpression330);
					pmexpression14=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression14.getTree());

					LT15=(Token)match(input,LT,FOLLOW_LT_in_ineqexpression332); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					LT15_tree = (Object)adaptor.create(LT15);
					root_0 = (Object)adaptor.becomeRoot(LT15_tree, root_0);
					}

					pushFollow(FOLLOW_pmexpression_in_ineqexpression335);
					pmexpression16=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression16.getTree());

					}
					break;
				case 3 :
					// Script\\Framework\\ExpressionGrammar.g:50:81: pmexpression LTE ^ pmexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_pmexpression_in_ineqexpression339);
					pmexpression17=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression17.getTree());

					LTE18=(Token)match(input,LTE,FOLLOW_LTE_in_ineqexpression341); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					LTE18_tree = (Object)adaptor.create(LTE18);
					root_0 = (Object)adaptor.becomeRoot(LTE18_tree, root_0);
					}

					pushFollow(FOLLOW_pmexpression_in_ineqexpression344);
					pmexpression19=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression19.getTree());

					}
					break;
				case 4 :
					// Script\\Framework\\ExpressionGrammar.g:51:4: pmexpression GT ^ pmexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_pmexpression_in_ineqexpression350);
					pmexpression20=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression20.getTree());

					GT21=(Token)match(input,GT,FOLLOW_GT_in_ineqexpression352); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					GT21_tree = (Object)adaptor.create(GT21);
					root_0 = (Object)adaptor.becomeRoot(GT21_tree, root_0);
					}

					pushFollow(FOLLOW_pmexpression_in_ineqexpression355);
					pmexpression22=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression22.getTree());

					}
					break;
				case 5 :
					// Script\\Framework\\ExpressionGrammar.g:51:36: pmexpression GTE ^ pmexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_pmexpression_in_ineqexpression359);
					pmexpression23=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression23.getTree());

					GTE24=(Token)match(input,GTE,FOLLOW_GTE_in_ineqexpression361); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					GTE24_tree = (Object)adaptor.create(GTE24);
					root_0 = (Object)adaptor.becomeRoot(GTE24_tree, root_0);
					}

					pushFollow(FOLLOW_pmexpression_in_ineqexpression364);
					pmexpression25=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression25.getTree());

					}
					break;
				case 6 :
					// Script\\Framework\\ExpressionGrammar.g:51:69: pmexpression NE ^ pmexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_pmexpression_in_ineqexpression368);
					pmexpression26=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression26.getTree());

					NE27=(Token)match(input,NE,FOLLOW_NE_in_ineqexpression370); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					NE27_tree = (Object)adaptor.create(NE27);
					root_0 = (Object)adaptor.becomeRoot(NE27_tree, root_0);
					}

					pushFollow(FOLLOW_pmexpression_in_ineqexpression373);
					pmexpression28=pmexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, pmexpression28.getTree());

					}
					break;
				case 7 :
					// Script\\Framework\\ExpressionGrammar.g:51:101: notexpression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_notexpression_in_ineqexpression377);
					notexpression29=notexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, notexpression29.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ineqexpression"


	public static class notexpression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "notexpression"
	// Script\\Framework\\ExpressionGrammar.g:52:1: notexpression : ( NOT ^ booleanatom | booleanatom );
	public final ExpressionGrammarParser.notexpression_return notexpression() throws RecognitionException {
		ExpressionGrammarParser.notexpression_return retval = new ExpressionGrammarParser.notexpression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NOT30=null;
		ParserRuleReturnScope booleanatom31 =null;
		ParserRuleReturnScope booleanatom32 =null;

		Object NOT30_tree=null;

		try {
			// Script\\Framework\\ExpressionGrammar.g:52:15: ( NOT ^ booleanatom | booleanatom )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==NOT) ) {
				alt4=1;
			}
			else if ( (LA4_0==LPAREN||LA4_0==NAME) ) {
				alt4=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// Script\\Framework\\ExpressionGrammar.g:52:17: NOT ^ booleanatom
					{
					root_0 = (Object)adaptor.nil();


					NOT30=(Token)match(input,NOT,FOLLOW_NOT_in_notexpression384); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					NOT30_tree = (Object)adaptor.create(NOT30);
					root_0 = (Object)adaptor.becomeRoot(NOT30_tree, root_0);
					}

					pushFollow(FOLLOW_booleanatom_in_notexpression387);
					booleanatom31=booleanatom();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, booleanatom31.getTree());

					}
					break;
				case 2 :
					// Script\\Framework\\ExpressionGrammar.g:52:36: booleanatom
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_booleanatom_in_notexpression391);
					booleanatom32=booleanatom();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, booleanatom32.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "notexpression"


	public static class booleanatom_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "booleanatom"
	// Script\\Framework\\ExpressionGrammar.g:53:1: booleanatom : ( NAME | LPAREN ! andexpression RPAREN !);
	public final ExpressionGrammarParser.booleanatom_return booleanatom() throws RecognitionException {
		ExpressionGrammarParser.booleanatom_return retval = new ExpressionGrammarParser.booleanatom_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NAME33=null;
		Token LPAREN34=null;
		Token RPAREN36=null;
		ParserRuleReturnScope andexpression35 =null;

		Object NAME33_tree=null;
		Object LPAREN34_tree=null;
		Object RPAREN36_tree=null;

		try {
			// Script\\Framework\\ExpressionGrammar.g:53:13: ( NAME | LPAREN ! andexpression RPAREN !)
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==NAME) ) {
				alt5=1;
			}
			else if ( (LA5_0==LPAREN) ) {
				alt5=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// Script\\Framework\\ExpressionGrammar.g:53:16: NAME
					{
					root_0 = (Object)adaptor.nil();


					NAME33=(Token)match(input,NAME,FOLLOW_NAME_in_booleanatom399); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					NAME33_tree = (Object)adaptor.create(NAME33);
					adaptor.addChild(root_0, NAME33_tree);
					}

					}
					break;
				case 2 :
					// Script\\Framework\\ExpressionGrammar.g:53:23: LPAREN ! andexpression RPAREN !
					{
					root_0 = (Object)adaptor.nil();


					LPAREN34=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_booleanatom403); if (state.failed) return retval;
					pushFollow(FOLLOW_andexpression_in_booleanatom406);
					andexpression35=andexpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, andexpression35.getTree());

					RPAREN36=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_booleanatom408); if (state.failed) return retval;
					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "booleanatom"


	public static class pmexpression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};

